Revert "'fix' for signup page being partially covered by search bar"
This reverts commit 1b750bf06547a67546aabd7ee7dddb7b99ceba2b.

--- a/src/public/css/signup.css
+++ b/src/public/css/signup.css
@@ -16,14 +16,6 @@ main {
     }
 }
 
-@media screen and (max-height: 750px) {
-    main {
-        position:relative;
-        margin:20rem 0 0 0 ;
-        height: 575px;      
-    }
-}
-
 @media screen and (max-width: calc(600px + 4rem)) {
     body {
         margin: 0 2rem;
